--- a/src/ProviderTest/AndroidManifest.xml
+++ b/src/ProviderTest/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.databasetest"
+    package="com.example.providertest"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -22,14 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <provider 
-            android:name="com.example.databasetest.DatabaseProvider"
-            android:authorities="com.example.databasetest.provider"
-            android:exported="true">
-            
-        </provider>
-        
     </application>
 
 </manifest>
